<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ac.ucr.paracontar.submenu.CreditosActivity">

    <ScrollView
        android:name="@+id/title_activity_creditos"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"
        tools:context=".CreditosActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/encabezado"
                android:textAlignment="center"
                android:textColor="#25383C"
                android:textSize="16dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="334dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/portada"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="@string/nombre"
                android:textAlignment="center"
                android:textColor="#FF8C00"
                android:textSize="16dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#7B7A7F" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="3dp"
                android:text="@string/datos_bribri" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingBottom="3dp"
                android:text="@string/datos_bribri_aut"
                android:textAlignment="gravity"
                android:textColor="#25383C"
                android:textSize="16dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#7B7A7F" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="3dp"
                android:text="@string/ilustraciones" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingBottom="3dp"
                android:text="@string/ilustraciones_aut"
                android:textAlignment="gravity"
                android:textColor="#25383C"
                android:textSize="16dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#7B7A7F" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="3dp"
                android:text="@string/ilustracion_reverso" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingBottom="3dp"
                android:text="@string/ilustracion_reverso_aut"
                android:textAlignment="gravity"
                android:textColor="#25383C"
                android:textSize="16dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#7B7A7F" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="3dp"
                android:text="@string/diseno" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingBottom="3dp"
                android:text="@string/diseno_aut"
                android:textAlignment="gravity"
                android:textColor="#25383C"
                android:textSize="16dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#7B7A7F" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="3dp"
                android:text="@string/coordinacion" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingBottom="3dp"
                android:text="@string/coordinacion_aut"
                android:textAlignment="gravity"
                android:textColor="#25383C"
                android:textSize="16dp"

                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#7B7A7F" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="3dp"
                android:text="@string/programadores" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingBottom="3dp"
                android:text="@string/programadores_aut"
                android:textAlignment="gravity"
                android:textColor="#25383C"
                android:textSize="17dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#7B7A7F" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:paddingTop="15dp"
                    android:paddingBottom="3dp"
                    android:text="@string/contacto_T" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_weight="5"
                    android:gravity="right"
                    android:text="@string/contacto_N"
                    android:textAlignment="gravity"
                    android:textColor="#25383C"
                    android:textSize="16dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#7B7A7F" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:paddingTop="15dp"
                    android:paddingBottom="3dp"
                    android:text="@string/audios_T" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_weight="5"
                    android:gravity="right"
                    android:text="@string/audios_N"
                    android:textAlignment="gravity"
                    android:textColor="#25383C"
                    android:textSize="16dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#7B7A7F" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <ImageView
                    android:layout_width="232dp"
                    android:layout_height="151dp"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    app:srcCompat="@drawable/identidaducr"
                    tools:ignore="VectorDrawableCompat" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_weight="5"
                    android:text="@string/info_ucr"
                    android:textColor="#25383C"
                    android:textSize="13sp" />

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>